--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow: hidden; /* Hide scrollbars */
-}
-
 @layer base {
   html {
     font-family: 'Raleway', sans-serif;
@@ -16,4 +12,11 @@ body {
 }
 .root {
   margin: 0;
+}
+
+html {
+  scroll-padding-top: 80px; /* height of your navbar */
+}
+::-webkit-scrollbar {
+  display: none;
 }
